Actualizando a última versión de OL

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p id="estado"></p>
             </div>
             <div class="col-12">
-                <div id="mapa"></div>
+                <div id="mapa" style="min-height: 500; height: 600px;"></div>
             </div>
         </div>
     </main>
