--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,
             shrink-to-fit=no">
     <meta name="author" content="Parzibyte">
-    <title>Ubicación en mapa</title>
+    <title>Ubicación en mapa - By Parzibyte</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/ol.css">
@@ -37,6 +37,7 @@
                     Mostrar ubicación en mapa
                 </h1>
                 <p id="estado"></p>
+                <a href="https://parzibyte.me/blog">By Parzibyte</a>
             </div>
             <div class="col-12">
                 <div id="mapa" style="min-height: 500; height: 600px;"></div>
