--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--
 
-    Programado por Luis Cabrera Benito 
   ____          _____               _ _           _       
  |  _ \        |  __ \             (_) |         | |      
  | |_) |_   _  | |__) |_ _ _ __ _____| |__  _   _| |_ ___ 
@@ -10,10 +9,27 @@
          __/ |                               __/ |        
         |___/                               |___/         
     
-    
-    Blog:       https://parzibyte.me/blog
-    Ayuda:      https://parzibyte.me/blog/contrataciones-ayuda/
-    Contacto:   https://parzibyte.me/blog/contacto/
+____________________________________
+/ Si necesitas ayuda, contáctame en \
+\ https://parzibyte.me               /
+ ------------------------------------
+        \   ^__^
+         \  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
+Creado por Parzibyte (https://parzibyte.me).
+------------------------------------------------------------------------------------------------
+            | IMPORTANTE |
+Si vas a borrar este encabezado, considera:
+Seguirme: https://parzibyte.me/blog/sigueme/
+Y compartir mi blog con tus amigos
+También tengo canal de YouTube: https://www.youtube.com/channel/UCroP4BTWjfM0CkGB6AFUoBg?sub_confirmation=1
+Twitter: https://twitter.com/parzibyte
+Facebook: https://facebook.com/parzibyte.fanpage
+Instagram: https://instagram.com/parzibyte
+Hacer una donación vía PayPal: https://paypal.me/LuisCabreraBenito
+------------------------------------------------------------------------------------------------
 -->
 <!doctype html>
 <html lang="es">
